update column on mobile

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           </div>
 
           <div class="row">
-            <div class="col-lg-6" data-aos="fade-up">
+            <div class="col-md-6" data-aos="fade-up">
               <h3 class="achievements-title">CCA</h3>
               <div class="achievements-item pb-0">
                 <h4>National Robotics Competition</h4>
@@ -371,7 +371,7 @@
                 <li>2nd Place Overall</li>
               </div>
             </div>
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="achievements-title">Science / Math</h3>
               <div class="achievements-item">
                 <h4>44th International CB Paul Science Quiz</h4>
