changed video settings

--- a/index.html
+++ b/index.html
@@ -480,6 +480,9 @@
                       width="240"
                       height="180"
                       controls
+                      muted
+                      autoplay
+                      loop
                     >
                       <source
                         src="assets/img/videos/chess.mp4"
@@ -582,6 +585,9 @@
                       width="240"
                       height="180"
                       controls
+                      muted
+                      autoplay
+                      loop
                     >
                       <source
                         src="assets/img/videos/IMG_5516.MOV"
@@ -690,6 +696,9 @@
                       width="240"
                       height="180"
                       controls
+                      muted
+                      autoplay
+                      loop
                     >
                       <source
                         src="assets/img/videos/IMG_5517.MOV"
