--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
       class="d-flex flex-column justify-content-center align-items-center"
     >
       <div class="hero-container mt-5 pt-5" data-aos="fade-in">
-        <h1>Shao Yang</h1>
+        <h2>Hi, I'm</h2>
+        <h1>Shao Yang,</h1>
         <p>
-          I'm a
+          A
           <span
             class="typed"
             data-typed-items="Student, Developer, Learner"
@@ -319,7 +320,7 @@
               <h3 class="achievements-title">CCA</h3>
               <div class="achievements-item pb-0">
                 <h4>National Robotics Competition</h4>
-                <h5>2021 - 2022</h5>
+                <h5>2021</h5>
                 <p>
                   <em
                     >NRC spurs interest and innovation offering students an
@@ -334,11 +335,10 @@
                   <li>1st in Overall Championship</li>
                   <li>1st in Best Programming</li>
                   <li>2nd in Best Robot Performance</li>
-                  <li>2nd in Best Presentation</li>
                 </ul>
               </div>
 
-              <h3 class="achievements-title">Presentation</h3>
+              <h3 class="achievements-title">Miscellaneous</h3>
               <div class="achievements-item">
                 <h4>Ngee Ann Polytechnic Social Innovation Hackathon</h4>
                 <h5>2022</h5>
@@ -370,6 +370,20 @@
                 </p>
                 <li>2nd Place Overall</li>
               </div>
+              <h3 class="achievements-title">School Awards</h3>
+              <div class="achievements-item">
+                <h4>Awards Day</h4>
+                <h5>2022</h5>
+                <ul>
+                  <li>3rd in level</li>
+                  <li>1st in class</li>
+                  <li>1st in Biology</li>
+                </ul>
+              </div>
+              <div class="achievements-item">
+                <h4>CCA Contribution Award</h4>
+                <h5>2023</h5>
+              </div>
             </div>
             <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="achievements-title">Science / Math</h3>
@@ -381,6 +395,17 @@
                   <li>Individual Gold Award</li>
                   <li>3rd Place Team</li>
                 </ul>
+              </div>
+              <div class="achievements-item">
+                <h4>Singapore Junior Chemistry Olympiad</h4>
+                <h5>2023</h5>
+                <li>Bronze Award</li>
+              </div>
+              <div class="achievements-item">
+                <h4>Singapore Junior Physics Olympiad</h4>
+                <h5>2023</h5>
+                <li>Individual Bronze Award</li>
+                <li>Team Bronze Award</li>
               </div>
               <div class="achievements-item">
                 <h4>
@@ -409,21 +434,22 @@
                 <li>Bronze Award</li>
               </div>
               <div class="achievements-item">
-                <h4>42nd International CB Paul Science Quiz</h4>
-                <h5>2021</h5>
-                <p>
-                  <em
-                    >Science / Math competition. Competed in Preliminary Round
-                    (Individual)
-                  </em>
-                </p>
-                <li>Silver Award</li>
-              </div>
-              <div class="achievements-item">
                 <h4>Singapore Mathematical Olympiad</h4>
                 <h5>2021</h5>
                 <p><em>Competed in junior section</em></p>
                 <li>Silver Award</li>
+              </div>
+              <h3 class="achievements-title">Edusave Awards</h3>
+              <div class="achievements-item">
+                <h4>Edusave Scholarship</h4>
+                <h5>2021, 2022, 2023</h5>
+                <p>
+                  <em>Achieved top 10%</em>
+                </p>
+              </div>
+              <div class="achievements-item">
+                <h4>EAGLES Award</h4>
+                <h5>2022, 2023</h5>
               </div>
             </div>
           </div>
