--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </li>
             <li>
               <a href="#portfolio" class="nav-link scrollto"
-                ><i class="bx bx-book-content"></i> <span>Portfolio</span></a
+                ><i class="bx bx-book-content"></i> <span>Projects</span></a
               >
             </li>
           </ul>
@@ -101,7 +101,7 @@
                 </li>
                 <li class="nav-item">
                   <a href="#portfolio" class="nav-link scrollto"
-                    ><i class="bx bx-book-content"></i> <span>Portfolio</span></a
+                    ><i class="bx bx-book-content"></i> <span>Projects</span></a
                   >
                 </li>
               </ul>
@@ -688,9 +688,6 @@
       </div>
     </footer>
     <!-- End  Footer -->
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"
-      ><i class="bi bi-arrow-up-short"></i
-    ></a>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
