--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="col-md-6">
           <p><span>Hi, my name is</span></p>
           <h1>Chai Shao Yang.</h1>
-          <h2>I am a Student Developer</h2>
+          <h2>I am a Student Developer.</h2>
           <p>
             I'm an innovative and eager learner who focuses on developing effective solutions for
             real-world problems.
