--- a/index.html
+++ b/index.html
@@ -124,8 +124,19 @@
           <h2>I am a Student Developer.</h2>
           <p>
             I'm an innovative and eager learner who focuses on developing effective solutions for
-            real-world problems.
+            <span>real-world problems</span>.
           </p>
+          <div class="social-links mt-3 d-none d-lg-block">
+            <a href="mailto:sychai271@gmail.com" target="_blank" class="email"
+              ><i class="bx bx-envelope"></i
+            ></a>
+            <a href="https://www.instagram.com/sy.chai_/" target="_blank" class="instagram"
+              ><i class="bx bxl-instagram"></i
+            ></a>
+            <a href="https://github.com/SYChai271" target="_blank" class="github"
+              ><i class="bx bxl-github"></i
+            ></a>
+          </div>
         </div>
         <div class="col-md-6">
           <img
@@ -610,17 +621,6 @@
     <footer id="footer">
       <div class="container">
         <div class="copyright">Made by Shao Yang</div>
-        <div class="social-links mt-3 text-center d-none d-lg-block">
-          <a href="mailto:sychai271@gmail.com" target="_blank" class="email"
-            ><i class="bx bx-envelope"></i
-          ></a>
-          <a href="https://www.instagram.com/sy.chai_/" target="_blank" class="instagram"
-            ><i class="bx bxl-instagram"></i
-          ></a>
-          <a href="https://github.com/SYChai271" target="_blank" class="github"
-            ><i class="bx bxl-github"></i
-          ></a>
-        </div>
       </div>
     </footer>
     <!-- End  Footer -->
