--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </ul>
         </nav>
         <nav
-          class="navbar navbar-expand-lg navbar-dark fixed-top p-3 d-none d-lg-block navbar-custom"
+          class="navbar navbar-expand-lg navbar-dark fixed-top p-3 navbar-custom"
           id="navbar"
         >
           <div class="container">
