--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </ul>
               </div>
 
-              <h3 class="achievements-title">Miscellaneous</h3>
+              <h3 class="achievements-title">Projects</h3>
               <div class="achievements-item">
                 <h4>Ngee Ann Polytechnic Social Innovation Hackathon</h4>
                 <h5>2022</h5>
@@ -346,7 +346,11 @@
                 <p><em>Competed in junior section</em></p>
                 <li>Silver Award</li>
               </div>
-              <h3 class="achievements-title">Edusave Awards</h3>
+              <h3 class="achievements-title">Scholarships</h3>
+              <div class="achievements-item">
+                <h4>Engineering & Tech Programme Scholarship</h4>
+                <h5>2024</h5>
+              </div>
               <div class="achievements-item">
                 <h4>Edusave Scholarship</h4>
                 <h5>2021, 2022, 2023</h5>
