added new project

--- a/index.html
+++ b/index.html
@@ -75,10 +75,7 @@
             </li>
           </ul>
         </nav>
-        <nav
-          class="navbar navbar-expand-lg navbar-dark fixed-top p-3 navbar-custom"
-          id="navbar"
-        >
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-3 navbar-custom" id="navbar">
           <div class="container">
             <a href="index.html" class="navbar-brand">Chai Shao Yang</a>
 
@@ -273,10 +270,12 @@
                 <p>
                   <em
                     >The Young Technopreneur Challenge, sponsored by HP Inc. and supported by South
-                    West Community Development Council (CDC), aims to support students to <span>take
-                    ownership of the world they live in and actively develop solutions</span> to the UN
-                    Sustainable Development Goals, Singapore Green Plan 2030 and Sustainable South
-                    West Masterplan.</em
+                    West Community Development Council (CDC), aims to support students to
+                    <span
+                      >take ownership of the world they live in and actively develop solutions</span
+                    >
+                    to the UN Sustainable Development Goals, Singapore Green Plan 2030 and
+                    Sustainable South West Masterplan.</em
                   >
                 </p>
                 <li>2nd Place Overall</li>
@@ -301,7 +300,9 @@
               <div class="achievements-item">
                 <h4>44th International CB Paul Science Quiz</h4>
                 <h5>2023</h5>
-                <p><em>Competed in both <span>Preliminary and Final rounds</span></em></p>
+                <p>
+                  <em>Competed in both <span>Preliminary and Final rounds</span></em>
+                </p>
                 <ul>
                   <li>Individual Gold Award</li>
                   <li>3rd Place Team</li>
@@ -323,7 +324,8 @@
                 <h5>2022</h5>
                 <p>
                   <em
-                    >Innovated on solutions to <span>reduce environmental implications of fast fashion</span></em
+                    >Innovated on solutions to
+                    <span>reduce environmental implications of fast fashion</span></em
                   >
                 </p>
                 <li>Bronze Award</li>
@@ -380,7 +382,7 @@
             <div class="col-lg-12 d-flex justify-content-center">
               <ul id="portfolio-filters">
                 <li data-filter="*" class="filter-active">All</li>
-                <li data-filter=".filter-app">App</li>
+                <li data-filter=".filter-app">Games</li>
                 <li data-filter=".filter-robotics">Robotics</li>
                 <li data-filter=".filter-web">Web</li>
               </ul>
@@ -427,6 +429,18 @@
                     </p>
                   </div>
                   <a href="https://github.com/SYChai271/chess" target="_blank" title="More Details"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img src="assets/img/portfolio/game.png" class="img-fluid" alt="" />
+                <div class="portfolio-links">
+                  <a href="SY-RPG/SY-RPG.html" target="_blank"><i class="bx bx-plus"></i></a>
+                  <a href="https://github.com/SYChai271/SY-RPG" target="_blank" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
