--- a/index.html
+++ b/index.html
@@ -391,10 +391,16 @@
           <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="" />
+                <img
+                  src="assets/img/portfolio/portfolio-1.png"
+                  loading="lazy"
+                  class="img-fluid"
+                  alt=""
+                />
                 <div class="portfolio-links">
                   <a
                     href="assets/img/portfolio/portfolio-1.png"
+                    loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     data-glightbox="title: Chess App; description: .app-desc1"
@@ -436,7 +442,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/game.png" class="img-fluid" alt="" />
+                <img src="assets/img/portfolio/game.png" loading="lazy" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a href="SY-RPG/SY-RPG.html" target="_blank"><i class="bx bx-plus"></i></a>
                   <a href="https://github.com/SYChai271/SY-RPG" target="_blank" title="More Details"
@@ -448,10 +454,16 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-2.png" class="img-fluid" alt="" />
+                <img
+                  src="assets/img/portfolio/portfolio-2.png"
+                  loading="lazy"
+                  class="img-fluid"
+                  alt=""
+                />
                 <div class="portfolio-links">
                   <a
                     href="assets/img/portfolio/portfolio-2.png"
+                    loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     data-glightbox="title: Avis Fashion; description: .web-desc1"
@@ -486,10 +498,16 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-3.png" class="img-fluid" alt="" />
+                <img
+                  src="assets/img/portfolio/portfolio-3.png"
+                  load="lazy"
+                  class="img-fluid"
+                  alt=""
+                />
                 <div class="portfolio-links">
                   <a
                     href="assets/img/portfolio/portfolio-3.png"
+                    loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     data-glightbox="title: NRC 2021; description: .robotics-desc1"
@@ -540,10 +558,16 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-4.png" class="img-fluid" alt="" />
+                <img
+                  src="assets/img/portfolio/portfolio-4.webp"
+                  loading="lazy"
+                  class="img-fluid"
+                  alt=""
+                />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-4.png"
+                    href="assets/img/portfolio/portfolio-4.webp"
+                    loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     data-glightbox="title: 30by30; description: .web-desc2"
@@ -572,10 +596,16 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-5.png" class="img-fluid" alt="" />
+                <img
+                  src="assets/img/portfolio/portfolio-5.png"
+                  loading="lazy"
+                  class="img-fluid"
+                  alt=""
+                />
                 <div class="portfolio-links">
                   <a
                     href="assets/img/portfolio/portfolio-5.png"
+                    loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     data-glightbox="title: NRC 2022; description: .robotics-desc2"
