--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
   <body>
     <!-- ======= Mobile nav toggle button ======= -->
-    <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+    <i class="bx bx-menu mobile-nav-toggle d-xl-none"></i>
 
     <!-- ======= Header ======= -->
     <header id="header">
       <div class="d-flex flex-column">
         <div class="profile d-block d-lg-none">
           <img
-            src="assets/img/profile-img.png"
+            src="assets/img/profile-img.webp"
             alt=""
             class="img-fluid rounded-circle d-block d-lg-none"
           />
@@ -163,7 +163,7 @@
 
           <div class="row justify-content-between">
             <div class="col-md-4" data-aos="fade-right">
-              <img src="assets/img/profile-img.png" class="img-fluid dim" alt="" />
+              <img src="assets/img/profile-img.webp" class="img-fluid dim" alt="" />
             </div>
             <div class="col-md-8 pt-4 pt-md-0 content" data-aos="fade-left">
               <h3>Profile</h3>
@@ -499,14 +499,14 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-3.png"
-                  load="lazy"
+                  src="assets/img/portfolio/portfolio-3.webp"
+                  loading="lazy"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-3.png"
+                    href="assets/img/portfolio/portfolio-3.webp"
                     loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
