--- a/index.html
+++ b/index.html
@@ -391,12 +391,7 @@
           <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img
-                  src="assets/img/portfolio/portfolio-1.png"
-                  loading="lazy"
-                  class="img-fluid"
-                  alt=""
-                />
+                <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
                     href="assets/img/portfolio/portfolio-1.png"
@@ -442,7 +437,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/game.png" loading="lazy" class="img-fluid" alt="" />
+                <img src="assets/img/portfolio/game.png" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a href="SY-RPG/SY-RPG.html" target="_blank"><i class="bx bx-plus"></i></a>
                   <a href="https://github.com/SYChai271/SY-RPG" target="_blank" title="More Details"
@@ -454,12 +449,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img
-                  src="assets/img/portfolio/portfolio-2.png"
-                  loading="lazy"
-                  class="img-fluid"
-                  alt=""
-                />
+                <img src="assets/img/portfolio/portfolio-2.png" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
                     href="assets/img/portfolio/portfolio-2.png"
@@ -498,12 +488,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
               <div class="portfolio-wrap">
-                <img
-                  src="assets/img/portfolio/portfolio-3.webp"
-                  loading="lazy"
-                  class="img-fluid"
-                  alt=""
-                />
+                <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
                     href="assets/img/portfolio/portfolio-3.webp"
@@ -558,12 +543,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img
-                  src="assets/img/portfolio/portfolio-4.webp"
-                  loading="lazy"
-                  class="img-fluid"
-                  alt=""
-                />
+                <img src="assets/img/portfolio/portfolio-4.webp" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
                     href="assets/img/portfolio/portfolio-4.webp"
@@ -596,12 +576,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
               <div class="portfolio-wrap">
-                <img
-                  src="assets/img/portfolio/portfolio-5.png"
-                  loading="lazy"
-                  class="img-fluid"
-                  alt=""
-                />
+                <img src="assets/img/portfolio/portfolio-5.png" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
                     href="assets/img/portfolio/portfolio-5.png"
