--- a/index.html
+++ b/index.html
@@ -391,10 +391,10 @@
           <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="" />
+                <img src="assets/img/portfolio/portfolio-1.webp" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-1.png"
+                    href="assets/img/portfolio/portfolio-1.webp"
                     loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
@@ -437,7 +437,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/game.png" class="img-fluid" alt="" />
+                <img src="assets/img/portfolio/game.webp" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a href="SY-RPG/SY-RPG.html" target="_blank"><i class="bx bx-plus"></i></a>
                   <a href="https://github.com/SYChai271/SY-RPG" target="_blank" title="More Details"
@@ -449,10 +449,10 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-2.png" class="img-fluid" alt="" />
+                <img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-2.png"
+                    href="assets/img/portfolio/portfolio-2.webp"
                     loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
@@ -576,10 +576,10 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-5.png" class="img-fluid" alt="" />
+                <img src="assets/img/portfolio/portfolio-5.webp" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-5.png"
+                    href="assets/img/portfolio/portfolio-5.webp"
                     loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
