--- a/index.html
+++ b/index.html
@@ -222,29 +222,24 @@
 
           <div class="row">
             <div class="col-md-6" data-aos="fade-up">
-              <h3 class="achievements-title">CCA</h3>
-              <div class="achievements-item pb-0">
+              <h3 class="achievements-title">Robotics</h3>
+              <div class="achievements-item">
+                <h4>World Robot Olympiad Singapore</h4>
+                <h5>2024</h5>
+                <ul>
+                  <li>Robomission Senior Champion</li>
+                  <li>Coder Award</li>
+                </ul>
+              </div>
+              <div class="achievements-item">
                 <h4>National Robotics Competition</h4>
                 <h5>2021</h5>
-                <p>
-                  <em
-                    >NRC spurs interest and innovation offering students an opportunity to apply
-                    what they learnt in school and experience
-                    <span>STEM hands-on through interactive and meaningful experiences</span>. In
-                    the process, students develop skills such as
-                    <span
-                      >problem solving, entrepreneurial dare, creative thinking and team
-                      spirit</span
-                    >.
-                  </em>
-                </p>
                 <ul>
                   <li>1st in Overall Championship</li>
                   <li>1st in Best Programming</li>
                   <li>2nd in Best Robot Performance</li>
                 </ul>
               </div>
-
               <h3 class="achievements-title">Projects</h3>
               <div class="achievements-item">
                 <h4>Ngee Ann Polytechnic Social Innovation Hackathon</h4>
