changed mobile navigation

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
   <body>
     <!-- ======= Mobile nav toggle button ======= -->
-    <i class="bx bx-menu mobile-nav-toggle d-xl-none"></i>
+    <i class="bx bx-menu mobile-nav-toggle d-lg-none"></i>
 
     <!-- ======= Header ======= -->
     <header id="header">
       <div class="d-flex flex-column">
-        <div class="profile d-block d-lg-none">
+        <div class="profile d-block d-md-none">
           <img
             src="assets/img/profile-img.webp"
             alt=""
-            class="img-fluid rounded-circle d-block d-lg-none"
+            class="img-fluid rounded-circle"
           />
           <h1 class="text-light"><a href="index.html">Chai Shao Yang</a></h1>
-          <div class="social-links mt-3 text-center d-block d-lg-none">
+          <div class="social-links mt-3 text-center">
             <a href="mailto:sychai271@gmail.com" target="_blank" class="email"
               ><i class="bx bx-envelope"></i
             ></a>
