--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
             <div class="col-md-6" data-aos="fade-up">
               <h3 class="achievements-title">Robotics</h3>
               <div class="achievements-item">
+                <h4>World Robot Olympiad International Final</h4>
+                <h5>2024</h5>
+                <ul>
+                  <li>Top 30 Placing Robomission Senior</li>
+                </ul>
+              </div>
+              <div class="achievements-item">
                 <h4>World Robot Olympiad Singapore</h4>
                 <h5>2024</h5>
                 <ul>
