--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
+                      <!--email_off-->sychai271@gmail.com<!--/email_off-->
                       <strong>Email:</strong> <span>sychai271@gmail.com</span>
                     </li>
                   </ul>
