--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
     <header id="header">
       <div class="d-flex flex-column">
         <div class="profile d-block d-md-none">
-          <img
-            src="assets/img/profile-img.webp"
-            alt=""
-            class="img-fluid rounded-circle"
-          />
+          <img src="assets/img/profile-img.webp" alt="" class="img-fluid rounded-circle" />
           <h1 class="text-light"><a href="index.html">Chai Shao Yang</a></h1>
           <div class="social-links mt-3 text-center">
             <a href="mailto:sychai271@gmail.com" target="_blank" class="email"
@@ -175,7 +171,7 @@
                   <ul>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Website:</strong> <span>SYChai271.github.io</span>
+                      <strong>Website:</strong> <span>sychai.com</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -191,8 +187,8 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <!--email_off-->sychai271@gmail.com<!--/email_off-->
-                      <strong>Email:</strong> <span>sychai271@gmail.com</span>
+                      <strong>Email:</strong>
+                      <span><!--email_off-->sychai271@gmail.com<!--/email_off--></span>
                     </li>
                   </ul>
                 </div>
