--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
             <h2>About</h2>
             <p>
               Hi, my name is Shao Yang. As an <span>eager learner</span>, I hope to expand my
-              knowledge especially in the field of <span>Math and Science</span>. I enjoy learning
-              about the newest technology and I do my best to be up-to-date with the latest
-              developments, be it Artificial Intelligence, robotics, or anything in between. I am
-              innovative and can come up with
+              knowledge especially in the field of <span>Math and Science</span>. I am a person of
+              tenacity, striving for constant self-improvement by embracing challenges that come my
+              way, espcially in the field of Artificial Intelligence and robotics. I am innovative
+              and can come up with
               <span>effective solutions to address new problems that may arise</span>.
             </p>
           </div>
@@ -164,7 +164,7 @@
             <div class="col-md-8 pt-4 pt-md-0 content" data-aos="fade-left">
               <h3>Profile</h3>
               <p class="fst-italic">
-                Currently, I'm a JC 1 student at Anglo-Chinese Junior College.
+                Currently, I'm a JC 2 student at Anglo-Chinese Junior College.
               </p>
               <div class="row">
                 <div class="col-lg-6">
@@ -194,11 +194,17 @@
                 </div>
               </div>
               <p>
-                In my free time, I enjoy doing several activities such as programming, gaming with
-                friends as well as listening to music. My passion for programming and creating
-                useful tools prompted me to join the <span>Robotics Club CCA</span> in secondary
-                school. There, I was able to continue to develop this interest and take up various
-                leadership positions, most notably, <span>CCA Vice-Chairperson</span>.
+                My passion for programming and creating useful tools prompted me to join the
+                <span>Robotics Club CCA</span> in secondary school. There, I was able to develop
+                this interest and take up various leadership positions, most notably,
+                <span>CCA Vice-Chairperson</span>. In JC, I continued to hone my skills in
+                programming and engineering, joining the
+                <span>Engineering & Tech Programme Scholarship</span> as well as becoming
+                <span>Vice-President of my STEM CCA</span>. I also took part in the
+                <span>Nanyang Research Programme</span>, where I utlised ML to model plant growth
+                based on environemntal data collected by IoT sensors. My interest in Competitive
+                Robotics continued, allowing me to clinch a second national title in Robotics and
+                even <span>represent Singapore at the International Final in Türkiye</span>.
               </p>
             </div>
           </div>
@@ -300,6 +306,13 @@
             <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="achievements-title">Science / Math</h3>
               <div class="achievements-item">
+                <h4>ETPS-NUS Tech for Tomorrow</h4>
+                <h5>2025</h5>
+                <ul>
+                  <li>2nd Place in Energy & Sustainability Theme</li>
+                </ul>
+              </div>
+              <div class="achievements-item">
                 <h4>44th International CB Paul Science Quiz</h4>
                 <h5>2023</h5>
                 <p>
@@ -365,7 +378,7 @@
               <h3 class="achievements-title">Scholarships</h3>
               <div class="achievements-item">
                 <h4>Engineering & Tech Programme Scholarship</h4>
-                <h5>2024</h5>
+                <h5>2024 - 2025</h5>
               </div>
               <div class="achievements-item">
                 <h4>Edusave Scholarship</h4>
