--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header id="header">
       <div class="d-flex flex-column">
         <div class="profile d-block d-md-none">
-          <img src="assets/img/profile-img.webp" alt="" class="img-fluid rounded-circle" />
+          <img src="assets/img/chai_shao_yang.webp" alt="chai shao yang" class="img-fluid rounded-circle" />
           <h1 class="text-light"><a href="index.html">Chai Shao Yang</a></h1>
           <div class="social-links mt-3 text-center">
             <a href="mailto:sychai271@gmail.com" target="_blank" class="email"
@@ -159,7 +159,7 @@
 
           <div class="row justify-content-between">
             <div class="col-md-4" data-aos="fade-right">
-              <img src="assets/img/profile-img.webp" class="img-fluid dim" alt="" />
+              <img src="assets/img/chai_shao_yang.webp" class="img-fluid dim" alt="chai shao yang" />
             </div>
             <div class="col-md-8 pt-4 pt-md-0 content" data-aos="fade-left">
               <h3>Profile</h3>
