--- a/index.html
+++ b/index.html
@@ -290,6 +290,16 @@
               </div>
               <h3 class="achievements-title">School Awards</h3>
               <div class="achievements-item">
+                <h4>Founder's Day</h4>
+                <h5>2024</h5>
+                <ul>
+                  <li>Wan Fook Weng Award (Top in Cohort)</li>
+                  <li>Wong Ah Loong Science Scholarship</li>
+                  <li>H2 Computing Book Prize</li>
+                  <li>Scholastic Merit Award</li>
+                </ul>
+              </div>
+              <div class="achievements-item">
                 <h4>Awards Day</h4>
                 <h5>2022</h5>
                 <ul>
@@ -305,6 +315,13 @@
             </div>
             <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="achievements-title">Science / Math</h3>
+              <div class="achievements-item">
+                <h4>Singapore Young Physicists' Tournament</h4>
+                <h5>2025</h5>
+                <ul>
+                  <li>Distinction Award</li>
+                </ul>
+              </div>
               <div class="achievements-item">
                 <h4>ETPS-NUS Tech for Tomorrow</h4>
                 <h5>2025</h5>
