--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
     <header id="header">
       <div class="d-flex flex-column">
         <div class="profile d-block d-md-none">
-          <img src="assets/img/chai_shao_yang.webp" alt="chai shao yang" class="img-fluid rounded-circle" />
+          <img
+            src="assets/img/chai_shao_yang.webp"
+            alt="chai shao yang"
+            class="img-fluid rounded-circle"
+          />
           <h1 class="text-light"><a href="index.html">Chai Shao Yang</a></h1>
           <div class="social-links mt-3 text-center">
             <a href="mailto:sychai271@gmail.com" target="_blank" class="email"
@@ -159,7 +163,11 @@
 
           <div class="row justify-content-between">
             <div class="col-md-4" data-aos="fade-right">
-              <img src="assets/img/chai_shao_yang.webp" class="img-fluid dim" alt="chai shao yang" />
+              <img
+                src="assets/img/chai_shao_yang.webp"
+                class="img-fluid dim"
+                alt="chai shao yang"
+              />
             </div>
             <div class="col-md-8 pt-4 pt-md-0 content" data-aos="fade-left">
               <h3>Profile</h3>
@@ -229,6 +237,11 @@
               <div class="achievements-item">
                 <h4>World Robot Olympiad International Final</h4>
                 <h5>2024</h5>
+                <p>
+                  <em
+                    >Represented Singapore at Interntional Final in Izmir, Türkiye</em
+                  >
+                </p>
                 <ul>
                   <li>Top 30 Placing Robomission Senior</li>
                 </ul>
