--- a/index.html
+++ b/index.html
@@ -238,9 +238,7 @@
                 <h4>World Robot Olympiad International Final</h4>
                 <h5>2024</h5>
                 <p>
-                  <em
-                    >Represented Singapore at Interntional Final in Izmir, Türkiye</em
-                  >
+                  <em>Represented Singapore at Interntional Final in Izmir, Türkiye</em>
                 </p>
                 <ul>
                   <li>Top 30 Placing Robomission Senior</li>
@@ -467,8 +465,9 @@
                       height="180"
                       controls
                       muted
-                      autoplay
+                      autoplay="false"
                       loop
+                      preload="none"
                     >
                       <source src="assets/img/videos/chess.mp4" type="video/mp4" />
                     </video>
@@ -564,8 +563,9 @@
                       height="180"
                       controls
                       muted
-                      autoplay
+                      autoplay="false"
                       loop
+                      preload="none"
                     >
                       <source src="assets/img/videos/IMG_5516.MOV" type="video/mp4" />
                     </video>
@@ -652,8 +652,9 @@
                       height="180"
                       controls
                       muted
-                      autoplay
+                      autoplay="false"
                       loop
+                      preload="none"
                     >
                       <source src="assets/img/videos/IMG_5517.MOV" type="video/mp4" />
                     </video>
@@ -706,12 +707,12 @@
     <!-- End  Footer -->
 
     <!-- Vendor JS Files -->
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/aos/aos.js" defer></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js" defer></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js" defer></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js" defer></script>
 
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main.js" defer></script>
   </body>
 </html>
