--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <title>Shao Yang's Portfolio</title>
 
-    <link href="assets/img/icon.png" rel="icon" />
-    <link href="assets/img/icon.png" rel="apple-touch-icon" />
+    <link href="assets/icon.png" rel="icon" />
+    <link href="assets/icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -15,12 +15,12 @@
       rel="stylesheet"
     />
 
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/css/glightbox.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/swiper@9.3.2/swiper-bundle.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -32,7 +32,7 @@
       <div class="d-flex flex-column">
         <div class="profile d-block d-md-none">
           <img
-            src="assets/img/chai_shao_yang.webp"
+            src="assets/chai_shao_yang.webp"
             alt="chai shao yang"
             class="img-fluid rounded-circle"
           />
@@ -136,7 +136,7 @@
         </div>
         <div class="col-md-6">
           <img
-            src="/assets/img/icons/undraw_programming_re_kg9v.svg"
+            src="/assets/icons/undraw_programming_re_kg9v.svg"
             alt=""
             class="img-fluid dim"
           />
@@ -164,7 +164,7 @@
           <div class="row justify-content-between">
             <div class="col-md-4" data-aos="fade-right">
               <img
-                src="assets/img/chai_shao_yang.webp"
+                src="assets/chai_shao_yang.webp"
                 class="img-fluid dim"
                 alt="chai shao yang"
               />
@@ -447,10 +447,10 @@
           <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-1.webp" class="img-fluid" alt="" />
+                <img src="assets/portfolio/portfolio-1.webp" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-1.webp"
+                    href="assets/portfolio/portfolio-1.webp"
                     loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
@@ -469,7 +469,7 @@
                       loop
                       preload="none"
                     >
-                      <source src="assets/img/videos/chess.mp4" type="video/mp4" />
+                      <source src="assets/videos/chess.mp4" type="video/mp4" />
                     </video>
                     <p class="mt-3">
                       Chess is one of my favourite passtimes as it helps me develop my problem
@@ -494,7 +494,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/game.webp" class="img-fluid" alt="" />
+                <img src="assets/portfolio/game.webp" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a href="SY-RPG/SY-RPG.html" target="_blank"><i class="bx bx-plus"></i></a>
                   <a href="https://github.com/SYChai271/SY-RPG" target="_blank" title="More Details"
@@ -506,10 +506,10 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="" />
+                <img src="assets/portfolio/portfolio-2.webp" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-2.webp"
+                    href="assets/portfolio/portfolio-2.webp"
                     loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
@@ -545,10 +545,10 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="" />
+                <img src="assets/portfolio/portfolio-3.webp" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-3.webp"
+                    href="assets/portfolio/portfolio-3.webp"
                     loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
@@ -567,7 +567,7 @@
                       loop
                       preload="none"
                     >
-                      <source src="assets/img/videos/IMG_5516.MOV" type="video/mp4" />
+                      <source src="assets/videos/IMG_5516.MOV" type="video/mp4" />
                     </video>
                     <p class="mt-3">
                       Due to the pandemic, I was unable to compete in any robotics competition in
@@ -601,10 +601,10 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-4.webp" class="img-fluid" alt="" />
+                <img src="assets/portfolio/portfolio-4.webp" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-4.webp"
+                    href="assets/portfolio/portfolio-4.webp"
                     loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
@@ -634,10 +634,10 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-5.webp" class="img-fluid" alt="" />
+                <img src="assets/portfolio/portfolio-5.webp" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-5.webp"
+                    href="assets/portfolio/portfolio-5.webp"
                     loading="lazy"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
@@ -656,7 +656,7 @@
                       loop
                       preload="none"
                     >
-                      <source src="assets/img/videos/IMG_5517.MOV" type="video/mp4" />
+                      <source src="assets/videos/IMG_5517.MOV" type="video/mp4" />
                     </video>
                     <p class="mt-3">
                       The 2022 mission was radically different from that of 2021. There were many
@@ -707,12 +707,12 @@
     <!-- End  Footer -->
 
     <!-- Vendor JS Files -->
-    <script src="assets/vendor/aos/aos.js" defer></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js" defer></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js" defer></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/js/glightbox.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/dist/isotope.pkgd.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9.3.2/swiper-bundle.min.js" defer></script>
 
-    <script src="assets/js/main.js" defer></script>
+    <script src="main.js" defer></script>
   </body>
 </html>
