--- a/index.html
+++ b/index.html
@@ -233,7 +233,14 @@
 
           <div class="row">
             <div class="col-md-6" data-aos="fade-up">
-              <h3 class="achievements-title">Robotics</h3>
+              <h3 class="achievements-title">Computing & Robotics</h3>
+              <div class="achievements-item">
+                <h4>National Olympiad in Informatics</h4>
+                <h5>2025</h5>
+                <ul>
+                  <li>Silver Award</li>
+                </ul>
+              </div>
               <div class="achievements-item">
                 <h4>World Robot Olympiad International Final</h4>
                 <h5>2024</h5>
@@ -325,7 +332,7 @@
               </div>
             </div>
             <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="achievements-title">Science / Math</h3>
+              <h3 class="achievements-title">Science & Math</h3>
               <div class="achievements-item">
                 <h4>Singapore Young Physicists' Tournament</h4>
                 <h5>2025</h5>
