--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/css/glightbox.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/swiper@9.3.2/swiper-bundle.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -720,6 +720,6 @@
     <script src="https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/dist/isotope.pkgd.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9.3.2/swiper-bundle.min.js" defer></script>
 
-    <script src="main.js" defer></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
