--- a/index.html
+++ b/index.html
@@ -468,16 +468,10 @@
                   <div class="glightbox-desc app-desc1">
                     <video
                       class="d-none d-lg-block"
-                      width="240"
-                      height="180"
-                      controls
-                      muted
-                      autoplay="false"
-                      loop
-                      preload="none"
-                    >
-                      <source src="assets/videos/chess.mp4" type="video/mp4" />
-                    </video>
+                      width="240" height="180"
+                      controls muted loop
+                      data-src="assets/videos/chess.mp4"
+                    ></video>
                     <p class="mt-3">
                       Chess is one of my favourite passtimes as it helps me develop my problem
                       solving abilities as well as my critical thinking. This is why I decided that
@@ -566,16 +560,10 @@
                   <div class="glightbox-desc robotics-desc1">
                     <video
                       class="d-none d-lg-block"
-                      width="240"
-                      height="180"
-                      controls
-                      muted
-                      autoplay="false"
-                      loop
-                      preload="none"
-                    >
-                      <source src="assets/videos/IMG_5516.MOV" type="video/mp4" />
-                    </video>
+                      width="240" height="180"
+                      controls muted loop
+                      data-src="assets/videos/IMG_5516.MOV"
+                    ></video>
                     <p class="mt-3">
                       Due to the pandemic, I was unable to compete in any robotics competition in
                       2020, which makes this the first robotics competition I took part in. Although
@@ -655,16 +643,10 @@
                   <div class="glightbox-desc robotics-desc2">
                     <video
                       class="d-none d-lg-block"
-                      width="240"
-                      height="180"
-                      controls
-                      muted
-                      autoplay="false"
-                      loop
-                      preload="none"
-                    >
-                      <source src="assets/videos/IMG_5517.MOV" type="video/mp4" />
-                    </video>
+                      width="240" height="180"
+                      controls muted loop
+                      data-src="assets/videos/IMG_5517.MOV"
+                    ></video>
                     <p class="mt-3">
                       The 2022 mission was radically different from that of 2021. There were many
                       more elements demanding greater expertise in the engineering of robot to
