--- a/index.html
+++ b/index.html
@@ -213,6 +213,13 @@
                 Robotics continued, allowing me to clinch a second national title in Robotics and
                 even <span>represent Singapore at the International Final in Türkiye</span>.
               </p>
+              <div class="row mt-4">
+                <div class="col-12">
+                  <a href="assets/resume.pdf" target="_blank" class="btn btn-resume">
+                    <i class="bx bx-file"></i> View Resume
+                  </a>
+                </div>
+              </div>              
             </div>
           </div>
         </div>
