--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
               <div class="row mt-4">
                 <div class="col-12">
                   <a href="assets/resume.pdf" target="_blank" class="btn btn-resume">
-                    <i class="bx bx-file"></i> View Resume
+                    View Resume <i class="bx bx-link-external" style="font-size:x-large"></i>
                   </a>
                 </div>
               </div>              
